# steward

./: .gitignore  PLANNING.md  README.md  config.example.yml  deep-research-report.md  gitleaks.toml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: secrets.yml
scripts/: check_safe_to_push.sh  install_git_hooks.sh  rewrite_public_history.sh  scan_secrets.py
src/steward/: __init__.py  app.py
src/steward/api/: dependencies.py
src/steward/api/routes/: auth.py
src/steward/config/: __init__.py  loader.py  models.py
src/steward/db/: __init__.py  __main__.py  base.py  cli.py  migration.py  models.py  repositories.py  session.py
src/steward/db/migrations/: env.py
src/steward/db/migrations/versions/: 0001_create_core_tables.py
src/steward/scheduler/: __init__.py
src/steward/services/: auth.py
tests/: test_auth.py  test_config.py  test_db.py  test_health.py  test_repo_hygiene.py
